manifests/apps/warrior/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archive
  namespace: apps
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "It clones and runs Python and other scripts, needs write access to root fs"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: archive
  template:
    metadata:
      labels:
        app: archive
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      restartPolicy: Always
      containers:
        - name: archive
          image: atdr.meo.ws/archiveteam/warrior-dockerfile@sha256:972495c60ab7f43d8abfd494ada86581398067e0cb5c66cfff1caeca01d9f6fb
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8001
          livenessProbe:
            tcpSocket:
              port: 8001
          readinessProbe:
            tcpSocket:
              port: 8001
