manifests/apps/warrior/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: archive
  namespace: apps
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - archive.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: archive
          port: 8001
